--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<img src ="cat.jpg" title = Cat width="300px" height="300px" alt="White Cat"/> 
+<img src ="./cat.jpg" title = Cat width="300px" height="300px" alt="White Cat"/> 
 <p>
     A white cat is a striking creature, often associated with elegance and mystery. 
     Its fur, pure and pristine, reflects light,
